--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>avisi-apps</groupId>
   <artifactId>crux-active-objects</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>crux-active-objects</name>
   <dependencies>
     <dependency>
