--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,7 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.10.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>core.async</artifactId>
-      <version>0.4.490</version>
-    </dependency>
-    <dependency>
-      <groupId>juxt</groupId>
-      <artifactId>crux-core</artifactId>
-      <version>19.07-1.3.0-alpha</version>
+      <version>1.10.1</version>
     </dependency>
     <dependency>
       <groupId>com.atlassian.activeobjects</groupId>
@@ -27,14 +17,9 @@
       <version>2.0.0</version>
     </dependency>
     <dependency>
-      <groupId>com.atlassian.activeobjects</groupId>
-      <artifactId>activeobjects-test</artifactId>
-      <version>2.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>gnl</groupId>
-      <artifactId>ghostwheel</artifactId>
-      <version>0.3.9</version>
+      <groupId>juxt</groupId>
+      <artifactId>crux-core</artifactId>
+      <version>20.09-1.12.0-beta</version>
     </dependency>
   </dependencies>
   <build>
