--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
   </dependencies>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src-java</sourceDirectory>
     <resources>
       <resource>
         <directory>src</directory>
